--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -13,6 +13,28 @@
 			</a>
 		</div>
 	</nav>
+	<main>
 
+		<div class="row">
+			<div class="col-4">
+				<div class="card">
+					<div class="card-body">
+						<h3 class="card-title">Title</h3>
+						<p class="card-text">Text</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="card">
+					<div class="card-body">
+						<h3 class="card-title">Title</h3>
+						<p class="card-text">Text</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</main>
 
 {% endblock %}
